@@ -1,6 +1,7 @@
 package net.KabOOm356.Reporter.Database.Table.Creator;
 
 import net.KabOOm356.Database.Database;
+import net.KabOOm356.Database.DatabaseType;
 import net.KabOOm356.Database.Table.DatabaseTableCreator;
 import net.KabOOm356.Util.DatabaseUtil;
 
@@ -11,17 +12,24 @@ public class ModStatsTableCreator extends DatabaseTableCreator {
 
 	@Override
 	protected String getTableCreationQuery() {
-		return "CREATE TABLE IF NOT EXISTS ModStats (" +
-				DatabaseUtil.getAutoIncrementingPrimaryKeyQuery(getDatabase(), "ID") + ", " +
-				"ModName VARCHAR(16) NOT NULL, " +
-				"ModUUID VARCHAR(36) NOT NULL, " +
-				"AssignCount INTEGER NOT NULL DEFAULT '0', " +
-				"ClaimedCount INTEGER NOT NULL DEFAULT '0', " +
-				"CompletionCount INTEGER NOT NULL DEFAULT '0', " +
-				"DeletionCount INTEGER NOT NULL DEFAULT '0', " +
-				"MoveCount INTEGER NOT NULL DEFAULT '0', " +
-				"RespondCount INTEGER NOT NULL DEFAULT '0', " +
-				"UnassignCount INTEGER NOT NULL DEFAULT '0', " +
-				"UnclaimCount INTEGER NOT NULL DEFAULT '0');";
+		final StringBuilder createQuery = new StringBuilder();
+		createQuery.append("CREATE TABLE IF NOT EXISTS ModStats (")
+				.append(DatabaseUtil.getAutoIncrementingPrimaryKeyQuery(getDatabase(), "ID"))
+				.append(", ")
+				.append("ModName VARCHAR(16) NOT NULL, ")
+				.append("ModUUID VARCHAR(36) NOT NULL, ")
+				.append("AssignCount INTEGER NOT NULL DEFAULT '0', ")
+				.append("ClaimedCount INTEGER NOT NULL DEFAULT '0', ")
+				.append("CompletionCount INTEGER NOT NULL DEFAULT '0', ")
+				.append("DeletionCount INTEGER NOT NULL DEFAULT '0', ")
+				.append("MoveCount INTEGER NOT NULL DEFAULT '0', ")
+				.append("RespondCount INTEGER NOT NULL DEFAULT '0', ")
+				.append("UnassignCount INTEGER NOT NULL DEFAULT '0', ")
+				.append("UnclaimCount INTEGER NOT NULL DEFAULT '0')");
+		if (getDatabase().getDatabaseType() == DatabaseType.MYSQL) {
+			createQuery.append(DatabaseUtil.getTableCreationMetadata(getDatabase()));
+		}
+		createQuery.append(';');
+		return createQuery.toString();
 	}
 }
