@@ -1,6 +1,7 @@
 package net.KabOOm356.Reporter.Database.Table.Creator;
 
 import net.KabOOm356.Database.Database;
+import net.KabOOm356.Database.DatabaseType;
 import net.KabOOm356.Database.Table.DatabaseTableCreator;
 import net.KabOOm356.Util.DatabaseUtil;
 
@@ -11,15 +12,21 @@ public class PlayerStatsTableCreator extends DatabaseTableCreator {
 
 	@Override
 	protected String getTableCreationQuery() {
-		return "CREATE TABLE IF NOT EXISTS PlayerStats (" +
-				DatabaseUtil.getAutoIncrementingPrimaryKeyQuery(getDatabase(), "ID") + ", " +
-				"Name VARCHAR(16) NOT NULL, " +
-				"UUID VARCHAR(36) NOT NULL, " +
-				"FirstReportDate VARCHAR(19) NOT NULL DEFAULT '', " +
-				"LastReportDate VARCHAR(19) NOT NULL DEFAULT '', " +
-				"ReportCount INTEGER NOT NULL DEFAULT '0', " +
-				"FirstReportedDate VARCHAR(19) NOT NULL DEFAULT '', " +
-				"LastReportedDate VARCHAR(19) NOT NULL DEFAULT '', " +
-				"ReportedCount INTEGER NOT NULL DEFAULT '0');";
+		final StringBuilder createQuery = new StringBuilder();
+		createQuery.append("CREATE TABLE IF NOT EXISTS PlayerStats (")
+				.append(DatabaseUtil.getAutoIncrementingPrimaryKeyQuery(getDatabase(), "ID"))
+				.append(", ").append("Name VARCHAR(16) NOT NULL, ")
+				.append("UUID VARCHAR(36) NOT NULL, ")
+				.append("FirstReportDate VARCHAR(19) NOT NULL DEFAULT '', ")
+				.append("LastReportDate VARCHAR(19) NOT NULL DEFAULT '', ")
+				.append("ReportCount INTEGER NOT NULL DEFAULT '0', ")
+				.append("FirstReportedDate VARCHAR(19) NOT NULL DEFAULT '', ")
+				.append("LastReportedDate VARCHAR(19) NOT NULL DEFAULT '', ")
+				.append("ReportedCount INTEGER NOT NULL DEFAULT '0')");
+		if (getDatabase().getDatabaseType() == DatabaseType.MYSQL) {
+			createQuery.append(DatabaseUtil.getTableCreationMetadata(getDatabase()));
+		}
+		createQuery.append(';');
+		return createQuery.toString();
 	}
 }
