@@ -4,6 +4,7 @@ import net.KabOOm356.Database.Database;
 import net.KabOOm356.Database.Table.DatabaseTableUpdater;
 import net.KabOOm356.Database.Table.Version.DatabaseTableVersionUpdater;
 import net.KabOOm356.Reporter.Database.Table.Updater.VersionUpdater.ModStats.ModStatsTableVersion10;
+import net.KabOOm356.Reporter.Database.Table.Updater.VersionUpdater.ModStats.ModStatsTableVersion11;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -15,6 +16,7 @@ public class ModStatsTableUpdater extends DatabaseTableUpdater {
 		super(database, updateVersion, tableName);
 
 		versionUpdaters.add(new ModStatsTableVersion10(database, getTableName()));
+		versionUpdaters.add(new ModStatsTableVersion11(database, getTableName()));
 	}
 
 	@Override
